--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
         "test": "test"
     },
     "scripts": {
-        "test": "npx truffle test --network test"
+        "test": "npx truffle test --network test",
+        "lint:js": "eslint *.js ."
     },
     "repository": {
         "type": "git",
@@ -26,6 +27,11 @@
         "chai": "4.2.0",
         "chai-bignumber": "3.0.0",
         "truffle": "5.0.8",
-        "ganache-cli": "6.4.1"
+        "ganache-cli": "6.4.1",
+        "eslint": "^5.13.0",
+        "eslint-config-airbnb": "^17.1.0",
+        "eslint-plugin-import": "^2.16.0",
+        "eslint-plugin-jsx-a11y": "^6.2.1",
+        "eslint-plugin-react": "^7.12.4"
     }
 }
