--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "scripts": {
         "test:local": "truffle test --network test",
         "test:docker": "echo TODO!",
-        "lint:js": "eslint *.js ."
+        "lint:js": "eslint *.js .",
+        "lint:sol": "solium -d contracts --fix"
     },
     "repository": {
         "type": "git",
@@ -33,6 +34,7 @@
         "eslint-config-airbnb": "^17.1.0",
         "eslint-plugin-import": "^2.16.0",
         "eslint-plugin-jsx-a11y": "^6.2.1",
-        "eslint-plugin-react": "^7.12.4"
+        "eslint-plugin-react": "^7.12.4",
+        "ethlint": "1.2.3"
     }
 }
