--- a/package.json
+++ b/package.json
@@ -31,23 +31,23 @@
     },
     "homepage": "https://github.com/cementdao/fixidity#readme",
     "dependencies": {
-        "bignumber.js": "8.1.1",
-        "truffle-hdwallet-provider": "^1.0.7"
+        "bignumber.js": "9.0.0",
+        "@truffle/hdwallet-provider": "1.0.29"
     },
     "devDependencies": {
         "chai": "4.2.0",
         "chai-bignumber": "3.0.0",
-        "eslint": "^5.13.0",
-        "eslint-config-airbnb": "^17.1.0",
-        "eslint-plugin-import": "^2.16.0",
-        "eslint-plugin-jsx-a11y": "^6.2.1",
-        "eslint-plugin-react": "^7.12.4",
-        "ganache-cli": "6.4.1",
-        "eth-gas-reporter": "^0.1.12",
-        "ethlint": "1.2.3",
-        "solc": "^0.5.7",
-        "solidity-coverage": "0.6.0-beta.4",
+        "eslint": "5.13.0",
+        "eslint-config-airbnb": "17.1.0",
+        "eslint-plugin-import": "2.16.0",
+        "eslint-plugin-jsx-a11y": "6.2.1",
+        "eslint-plugin-react": "7.12.4",
+        "ganache-cli": "6.8.2",
+        "eth-gas-reporter": "0.2.14",
+        "ethlint": "1.2.5",
+        "solc": "0.5.7",
+        "solidity-coverage": "0.7.1",
         "surya": "0.2.8",
-        "truffle": "5.0.13"
+        "truffle": "5.1.10"
     }
 }
