--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-    "name": "fixidity",
-    "version": "0.1.0",
+    "name": "@hq20/fixidity",
+    "version": "0.1.0-alpha.0",
     "description": "Fixed precision decimal math library for Solidity",
     "main": "truffle-config.js",
     "files": [
-        "contracts"
+        "contracts",
+        "!contracts/mocks"
     ],
     "scripts": {
         "test:local": "truffle test --network test",
@@ -19,7 +20,7 @@
     },
     "repository": {
         "type": "git",
-        "url": "git+https://github.com/cementdao/fixidity.git"
+        "url": "git+https://github.com/hq20/fixidity.git"
     },
     "author": "gadiguy@gmail.com",
     "contributors": [
