ignore migrations.sol in release

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "main": "truffle-config.js",
     "files": [
         "contracts",
-        "!contracts/mocks"
+        "!contracts/mocks",
+        "!contracts/Migrations.sol"
     ],
     "scripts": {
         "test:local": "truffle test --network test",
